<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>it.pagopa.pn</groupId>
		<artifactId>pn-parent</artifactId>
		<version>2.1.1</version>
		<relativePath />
	</parent>
	<artifactId>pn-radd-fsu</artifactId>
	<version>2.2.0-SNAPSHOT</version>
	<name>pn-radd-fsu</name>
	<description>RAAD Fsu microservice</description>
	<scm>
		<connection>${git.conn}</connection>
		<developerConnection>${git.devConn}</developerConnection>
		<url>${git.url}</url>
	  <tag>HEAD</tag>
  	</scm>
	<properties>
		<java.version>17</java.version>
    	<jacoco.min.line.cover.ratio>0.01</jacoco.min.line.cover.ratio>
	</properties>
	<dependencies>
		<dependency>
			<groupId>it.pagopa.pn</groupId>
			<artifactId>pn-commons</artifactId>
			<version>2.1.9</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.swagger/swagger-annotations -->
		<dependency>
			<groupId>io.swagger</groupId>
			<artifactId>swagger-annotations</artifactId>
			<version>1.6.5</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/dynamodb-enhanced -->
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>dynamodb-enhanced</artifactId>
			<version>2.17.155</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
		</dependency>
		<dependency>
			<groupId>org.hibernate.validator</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>6.0.20.Final</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-test</artifactId>
            <scope>test</scope>
        </dependency>
		 <dependency>
            <groupId>org.mock-server</groupId>
            <artifactId>mockserver-junit-jupiter</artifactId>
            <version>5.11.1</version>
			<scope>test</scope>
        </dependency>
		 <dependency>
            <groupId>org.mock-server</groupId>
            <artifactId>mockserver-netty</artifactId>
            <version>5.11.0</version>
            <scope>test</scope>
        </dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>it/pagopa/pn/radd/microservice/msclient/generated/*</exclude>
						<exclude>it/pagopa/pn/radd/microservice/msclient/generated/**</exclude>
						<exclude>it/pagopa/pn/radd/rest/radd/v1/api/*</exclude>
						<exclude>it/pagopa/pn/radd/rest/radd/v1/dto/*</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
				<version>5.4.0</version>
				<executions>					
					<execution>
						<id>generate-radd-server</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<phase>process-resources</phase>
						<configuration>
							<inputSpec>${project.basedir}/docs/openapi/pn-radd-fsu-v1.yaml</inputSpec>
							<generatorName>spring</generatorName>
              				<library>spring-boot</library>
							<generateApiDocumentation>false</generateApiDocumentation>
							<generateApiTests>false</generateApiTests>
							<generateModelTests>false</generateModelTests>
							<configOptions>
							<dateLibrary>java11</dateLibrary>
							<delegatePattern>true</delegatePattern>
							<interfaceOnly>true</interfaceOnly>
							<annotationLibrary>none</annotationLibrary>
							<documentationProvider>source</documentationProvider>
							<openApiNullable>false</openApiNullable>
							<reactive>true</reactive>
							<skipDefaultInterface>false</skipDefaultInterface>
							<useTags>true</useTags>
							<basePackage>${project.groupId}.radd.rest.radd.v1</basePackage>
							<modelPackage>${project.groupId}.radd.rest.radd.v1.dto</modelPackage>
							<apiPackage>${project.groupId}.radd.rest.radd.v1.api</apiPackage>
							<configPackage>${project.groupId}.radd.rest.radd.v1.config</configPackage>
							</configOptions>				
						</configuration>
					</execution>
					<execution>
						<id>generate-client-pn-delivery</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<phase>process-resources</phase>
						<configuration>
							<inputSpec>https://raw.githubusercontent.com/pagopa/pn-delivery/1e3f9000330ef8c7bd174f7cc9d9550f4efe8467/docs/openapi/api-private-v1.yaml</inputSpec>
							<generatorName>java</generatorName>
							<library>webclient</library>
							<generateApiDocumentation>false</generateApiDocumentation>
							<generateApiTests>false</generateApiTests>
							<generateModelTests>false</generateModelTests>
							<generateSupportingFiles>true</generateSupportingFiles>
							<configOptions>
								<swaggerAnnotations>false</swaggerAnnotations>
								<openApiNullable>false</openApiNullable>
							</configOptions>
							<modelPackage>${project.groupId}.radd.microservice.msclient.generated.pndelivery.v1.dto</modelPackage>
							<apiPackage>${project.groupId}.radd.microservice.msclient.generated.pndelivery.v1.api</apiPackage>
							<modelNameSuffix>Dto</modelNameSuffix>
						</configuration>
					</execution>
					<execution>
						<id>generate-client-pn-delivery-push</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<phase>process-resources</phase>
						<configuration>
							<inputSpec>https://raw.githubusercontent.com/pagopa/pn-delivery-push/2d7dca0413e137ff0835b7d07e05f7c910638ff9/docs/openapi/api-private.yaml</inputSpec>
							<generatorName>java</generatorName>
							<library>webclient</library>
							<generateApiDocumentation>false</generateApiDocumentation>
							<generateApiTests>false</generateApiTests>
							<generateModelTests>false</generateModelTests>
							<generateSupportingFiles>true</generateSupportingFiles>
							<configOptions>
								<swaggerAnnotations>false</swaggerAnnotations>
								<openApiNullable>false</openApiNullable>
							</configOptions>
							<modelPackage>${project.groupId}.radd.microservice.msclient.generated.pndeliverypush.v1.dto</modelPackage>
							<apiPackage>${project.groupId}.radd.microservice.msclient.generated.pndeliverypush.v1.api</apiPackage>
							<modelNameSuffix>Dto</modelNameSuffix>
						</configuration>
					</execution>
					<execution>
						<id>generate-client-pn-delivery-push-internal</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<phase>process-resources</phase>
						<configuration>
							<inputSpec>https://raw.githubusercontent.com/pagopa/pn-delivery-push/2d7dca0413e137ff0835b7d07e05f7c910638ff9/docs/openapi/api-private.yaml</inputSpec>
							<generatorName>java</generatorName>
							<library>webclient</library>
							<generateApiDocumentation>false</generateApiDocumentation>
							<generateApiTests>false</generateApiTests>
							<generateModelTests>false</generateModelTests>
							<generateSupportingFiles>true</generateSupportingFiles>
							<configOptions>
								<swaggerAnnotations>false</swaggerAnnotations>
								<openApiNullable>false</openApiNullable>
							</configOptions>
							<modelPackage>${project.groupId}.radd.microservice.msclient.generated.pndeliverypush.internal.v1.dto</modelPackage>
							<apiPackage>${project.groupId}.radd.microservice.msclient.generated.pndeliverypush.internal.v1.api</apiPackage>
							<modelNameSuffix>Dto</modelNameSuffix>
						</configuration>
					</execution>
					<execution>
						<id>generate-client-pn-safe-storage</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<phase>process-resources</phase>
						<configuration>
							<inputSpec>${project.basedir}/docs/wsclients/pn-safe-storage/pn-safestorage-api-v1.yaml</inputSpec>
							<generatorName>java</generatorName>
							<library>webclient</library>
							<generateApiDocumentation>false</generateApiDocumentation>
							<generateApiTests>false</generateApiTests>
							<generateModelTests>false</generateModelTests>
							<generateSupportingFiles>true</generateSupportingFiles>
							<configOptions>
								<swaggerAnnotations>false</swaggerAnnotations>
								<openApiNullable>false</openApiNullable>
							</configOptions>
							<modelPackage>${project.groupId}.radd.microservice.msclient.generated.pnsafestorage.v1.dto</modelPackage>
							<apiPackage>${project.groupId}.radd.microservice.msclient.generated.pnsafestorage.v1.api</apiPackage>
							<modelNameSuffix>Dto</modelNameSuffix>
						</configuration>
					</execution>
					<execution>
						<id>generate-client-pn-data-vault</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<phase>process-resources</phase>
						<configuration>
							<inputSpec>https://raw.githubusercontent.com/pagopa/pn-data-vault/fd6899d33ff9c719aae872c0a3a4db51a921ace7/docs/openapi/pn-datavault-api-v1.yaml</inputSpec>
							<generatorName>java</generatorName>
							<library>webclient</library>
							<generateApiDocumentation>false</generateApiDocumentation>
							<generateApiTests>false</generateApiTests>
							<generateModelTests>false</generateModelTests>
							<generateSupportingFiles>true</generateSupportingFiles>
							<configOptions>
								<swaggerAnnotations>false</swaggerAnnotations>
								<openApiNullable>false</openApiNullable>
							</configOptions>
							<modelPackage>${project.groupId}.radd.microservice.msclient.generated.pndatavault.v1.dto</modelPackage>
							<apiPackage>${project.groupId}.radd.microservice.msclient.generated.pndatavault.v1.api</apiPackage>
							<modelNameSuffix>Dto</modelNameSuffix>
						</configuration>
					</execution>
				</executions>
			</plugin>			 		 
		</plugins>
	</build>
</project>